# msh

./: .minishell_history  CMakeLists.txt  Makefile  a  cd.c  detct_token.c  detect_spec.c  detect_token.c  echo.c  execve.c  export.c  f.c  findbin.c  ft_init.c  history_management.c  key_actions.c  main.c  main.h  minishell  minishell.h  not_quote.c  parser.c  pepe.c  perser.c  pipe_exec.c  pwd.c  qqq.txt  quote.c  realized_f.c  search_glob.c  stdexec.c  termcaps.c  utils.c  utils_2.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_coldup.c  ft_coljoins.c  ft_free.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isolating.c  ft_lastcoldel.c  ft_lstmap.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  get_next_line.c  libft.h
libft-main/: Makefile  ft_atoi.c  ft_calloc.c  ft_free.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isolating.c  ft_isprint.c  ft_itoa.c  ft_lastcoldel.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  ft_toupper.c  get_next_line.c  libft.h
